--- a/src/main-styles/vars.scss
+++ b/src/main-styles/vars.scss
@@ -5,7 +5,7 @@ $orange: #e09f3e;
 $gray: #aeaeae;
 $red: #e5383b;
 $yellow: #FFD700;
-
+$black: #000000;
 
 // Animation
 $fast-animation: .3s ease-in-out;
