--- a/src/components/app-intro/app-intro.scss
+++ b/src/components/app-intro/app-intro.scss
@@ -21,9 +21,9 @@
    }
 
    &__btn{
-    font-weight: 700;
+    font-weight: 700 !important;
     @include flexible-font-size(12, 14);
-    padding: 5px 42px;
+    padding: 5px 42px !important;
    }
 }
 
