--- a/src/components/app-header/app-header.scss
+++ b/src/components/app-header/app-header.scss
@@ -34,8 +34,8 @@
             height: 35px;
         }
 
-        &:hover, &:focus {
-            color: $white;
+        &:hover, &:focus, &.active {
+            color: $white !important;
             text-decoration: underline;
         }
     }
