--- a/src/components/app-about/app-about.scss
+++ b/src/components/app-about/app-about.scss
@@ -2,12 +2,34 @@
 @import '../../main-styles/mixins.scss';
 
 .about {
-   margin: 40px 0;
+   margin: 40px auto;
+   text-align: center;
 
-   @media (min-width: $media-tab-md) {
-    margin: 80px 0;
-}
+    @media (min-width: $media-tab-md) {
+        margin: 80px auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 725px;
+    }
 
+    &__img{
+        max-height: 348px;
+        width: 100%;
+        max-width: 272px;
+    }
+
+
+   &__block{
+       max-width: 90%;
+       text-align: center;
+       margin: 30px auto;
+
+       @media (min-width: $media-tab-md) {
+        max-width: 346px;
+        margin: 0 auto;
+       }
+   }
 
    &__title{
     @include flexible-font-size(20, 24);
@@ -27,4 +49,19 @@
         color: $black;
        }
    }
+}
+
+.home-page{
+    .about{
+        &__img{
+            display: none;
+        }
+
+        &__block{
+     
+            @media (min-width: $media-tab-md) {
+              max-width: 580px;
+            }
+        }
+    }
 }
