--- a/src/components/search-panel/search-panel.scss
+++ b/src/components/search-panel/search-panel.scss
@@ -1,10 +1,25 @@
 @import '../../main-styles/vars.scss';
 
 .search-panel {
-    margin-top: 30px;
-    padding: 25px;
-    background-color: $dark;
-    border-radius: 4px;
-    box-shadow: 15px 15px 30px rgba(0,0,0, .15);
-    color: $white;
+    color: $black;
+    text-align: center;
+
+    hr{
+        color: $black;
+        width: 240px;
+        margin: 0 auto 60px;
+    }
+
+    .search-input{
+        background: $white;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+        border-radius: 4px;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 17px;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.5);
+        max-height: 30px;
+
+    }
 }
