--- a/src/components/search-panel/search-panel.scss
+++ b/src/components/search-panel/search-panel.scss
@@ -1,8 +1,22 @@
 @import '../../main-styles/vars.scss';
+@import '../../main-styles/mixins.scss';
 
 .search-panel {
     color: $black;
     text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-bottom: 60px;
+
+    &__search{
+        width: 40%;
+
+        &-label{
+            @include flexible-font-size(12, 14);
+            margin-right: 20px;
+        }
+    }
+
 
     hr{
         color: $black;
@@ -20,6 +34,7 @@
         text-align: center;
         color: rgba(0, 0, 0, 0.5);
         max-height: 30px;
+        max-width: 180px;
 
     }
 }
